修改显示名称

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-translatorx",
-  "displayName": "vscode-translatorx",
+  "displayName": "TranslatorX",
   "description": "translator",
   "version": "0.0.1",
   "publisher": "jiangtao",
