--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "vscode": "^1.21.1"
   },
   "galleryBanner": {
-    "color": "#1296DB",
+    "color": "#232323",
     "theme": "dark"
   },
   "keywords": [
