--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
         "title": "禁用translatorX",
         "category": "translatorX"
       }
+    ],
+    "keybindings": [
+      {
+        "command": "extension.test",
+        "key": "ctrl+8",
+        "mac": "cmd+8"
+      }
     ]
   },
   "scripts": {
