1，默认开启翻译; 2，添加手动配置功能

--- a/package.json
+++ b/package.json
@@ -45,6 +45,17 @@
         "category": "translatorX"
       }
     ],
+    "configuration": {
+      "type": "object",
+      "title": "TranslatorX",
+      "properties": {
+        "TranslatorX.enable": {
+          "type": "boolean",
+          "default": true,
+          "description": "TranslatorX开关"
+        }
+      }
+    },
     "keybindings": [
       {
         "command": "extension.test",
