1. 接入有道api; 2. 优化展示; 3. 添加baidu翻译状态控制

--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
           "default": true,
           "description": "TranslatorX开关 开启状态下默认启用baidu api"
         },
+        "TranslatorX.baidu.enable": {
+          "type": "boolean",
+          "default": true,
+          "description": "TranslatorX 百度翻译功能"
+        },
         "TranslatorX.youdao.enable": {
           "type": "boolean",
           "default": true,
