--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
         "command": "extension.replaceWithTranslationResults",
         "title": "替换选中内容",
         "category": "translatorX"
+      },
+      {
+        "command": "extension.test",
+        "title": "test",
+        "category": "translatorX"
       }
     ],
     "configuration": {
